fix: style: higher z-index for dropdown menus
reverts the previous fix which did not play well with modals
and fixes a test that should have catched this but didn’t

---

Revert "fix: style: no z-index for ‘crucial’ modal"
This reverts commit ebb301e61b7b20dad3e9ab3295ef9cbf43938a42.

--- a/app/assets/stylesheets/components/_ui-drop-menus.sass
+++ b/app/assets/stylesheets/components/_ui-drop-menus.sass
@@ -41,7 +41,7 @@
   margin: $space-x 0
   padding: 0
   text-align: left
-  z-index: 2000
+  z-index: 3000
   .ui-drop-item i,
   .ui-drop-icon
     margin-right: $space-x
