--- a/app/assets/stylesheets/components/_ui-modals.sass
+++ b/app/assets/stylesheets/components/_ui-modals.sass
@@ -67,7 +67,6 @@
   position: relative
   margin-top: 20px
   margin-bottom: 20px
-  z-index: initial
 
 // Size variations
 
